Fix location wrap over the box

--- a/src/components/location-switcher/index.sass
+++ b/src/components/location-switcher/index.sass
@@ -15,6 +15,16 @@
 			padding: .25em .75em
 			height: 39px
 
+			>.text
+				overflow: hidden
+				height: 100%
+
+				.info
+					display: flex
+					align-self: flex-start
+					align-items: center
+					min-height: 100%
+
 			.fa
 				font-size: 1.3em
 
@@ -41,11 +51,13 @@
 
 					&.location
 						color: $popo
-						margin: 0 0 2px
+						display: -webkit-box
+						text-overflow: ellipsis
 						overflow: hidden
 						white-space: pre-wrap
-						text-overflow: ellipsis
 						max-width: 150px
+						-webkit-line-clamp: 2
+						-webkit-box-orient: vertical
 
 		.v-form
 			.info
